# rust-100-exercises

./: Cargo.toml
exercises/01_intro/00_welcome/src/: lib.rs
exercises/01_intro/01_syntax/src/: lib.rs
exercises/02_basic_calculator/03_if_else/src/: lib.rs
exercises/02_basic_calculator/05_factorial/src/: lib.rs
exercises/02_basic_calculator/06_while/src/: lib.rs
exercises/02_basic_calculator/07_for/src/: lib.rs
exercises/02_basic_calculator/09_saturating/src/: lib.rs
exercises/03_ticket_v1/01_struct/src/: lib.rs
exercises/03_ticket_v1/02_validation/src/: lib.rs
exercises/03_ticket_v1/03_modules/src/: lib.rs
exercises/03_ticket_v1/04_visibility/src/: lib.rs
exercises/03_ticket_v1/05_encapsulation/src/: lib.rs
exercises/03_ticket_v1/07_setters/src/: lib.rs
exercises/03_ticket_v1/08_stack/src/: lib.rs
exercises/03_ticket_v1/12_outro/src/: lib.rs
